--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1194,7 +1194,7 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="assets/images/logo.svg" width="129" height="40" alt="{{homedict[imglogoalt]}}">
+            <img src="static/home/assets/images/santanaelevators.png" width="129" height="40" alt="{{homedict[imglogoalt]}}">
           </a>
 
           <p class="footer-text">
