--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -169,8 +169,8 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 500; --height: 600;">
-                  <img src="static/home/assets/images/"{{projectcard["imagename"]}}  width="500" height="600" loading="lazy"
-                    alt="New technology is not good or evil in and of itself" class="img-cover">
+                  <img src="{{ url_for ( 'static',filename='home/assets/images/'+projectcard['imagename'] ) }}  width="500" height="600" loading="lazy"
+                    alt="{{projectcard["content"][:140]}}" class="img-cover">
 
                   <ul class="avatar-list absolute">
 
@@ -208,7 +208,7 @@
                   </h3>
 
                   <p class="card-text">
-                    {{projectcard["content"][:140]}}  ...
+                    {{projectcard["content"][:140]}}  
                   </p>
 
                 </div>
@@ -244,7 +244,7 @@
             <div class="top-author">
               <ul class="avatar-list">
 
-<!-- 
+
              
                 <li class="avatar-item">
                   <a href="#" class="avatar large img-holder" style="--width: 100; --height: 100;">
@@ -276,7 +276,7 @@
                   </a>
                 </li>
                 
- -->
+
               </ul>
 
               <span class="span">{{homedict["ecommercecardsintro"]}}</span>
@@ -294,7 +294,7 @@
                 <figure class="card-banner img-holder" style="--width: 550; --height: 660;">
                   <img src="./assets/images/recommended-1.jpg"
                    width="550" height="660" loading="lazy"
-                    alt="altimageecommercecard " class="img-cover">
+                    alt="{{ecommercecard["content"][:140]}}" class="img-cover">
 
                   <ul class="avatar-list absolute">
 
