--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -449,14 +449,14 @@
     - #FOOTER
   -->
 
-  <footer class="footer">
+  <footer class="footer" id="footer">
     <div class="container">
 
       <div class="footer-top section">
 
         <div class="footer-brand">
 
-          <a href="#" class="logo">
+          <a href="#footer" class="logo">
             <img src="static/home/assets/images/santanaelevators.png" width="129" height="40" alt="{{homedict[imglogoalt]}}">
           </a>
 
@@ -476,25 +476,31 @@
           <li class="footer-list-item">
             <ion-icon name="logo-facebook"></ion-icon>
 
-            <a href="#" class="footer-link hover:underline">Facebook</a>
+            <a href="#footer" class="footer-link hover:underline">Facebook</a>
           </li>
 
           <li class="footer-list-item">
             <ion-icon name="logo-twitter"></ion-icon>
 
-            <a href="#" class="footer-link hover:underline">Twitter</a>
+            <a href="#footer" class="footer-link hover:underline">Twitter</a>
           </li>
 
           <li class="footer-list-item">
-            <ion-icon name="logo-pinterest"></ion-icon>
+            <ion-icon name="logo-phone"></ion-icon>
 
-            <a href="#" class="footer-link hover:underline">Pinterest</a>
+            <a href="#footer" class="footer-link hover:underline">+254 731 295 355</a>
           </li>
 
           <li class="footer-list-item">
-            <ion-icon name="logo-vimeo"></ion-icon>
+            <ion-icon name="logo-phone"></ion-icon>
 
-            <a href="#" class="footer-link hover:underline">Vimeo</a>
+            <a href="#footer" class="footer-link hover:underline">+254 790 771 946</a>
+          </li>
+
+          <li class="footer-list-item">
+            <ion-icon name="logo-email"></ion-icon>
+
+            <a href="#footer" class="footer-link hover:underline">santanasmartelevators@gmail.com</a>
           </li>
 
         </ul>
@@ -507,23 +513,23 @@
 
 
           <li>
-            <a href="#" class="footer-link hover:underline">Account</a>
+            <a href="#projects" class="footer-link hover:underline">Account</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Membership</a>
+            <a href="#projects" class="footer-link hover:underline">Membership</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Our Portfolio</a>
+            <a href="#projects" class="footer-link hover:underline">Our Portfolio</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Liasion Centres</a>
+            <a href="#projects" class="footer-link hover:underline">Liasion Centres</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Partners</a>
+            <a href="#projects" class="footer-link hover:underline">Partners</a>
           </li>
 
         </ul>
@@ -535,23 +541,23 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">General Store</a>
+            <a href="#ecommerce" class="footer-link hover:underline">General Store</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Installations</a>
+            <a href="#ecommerce" class="footer-link hover:underline">Installations</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Upgrades</a>
+            <a href="#ecommerce" class="footer-link hover:underline">Upgrades</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Maintenance Program</a>
+            <a href="#ecommerce" class="footer-link hover:underline">Maintenance Program</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Partners</a>
+            <a href="#ecommerce" class="footer-link hover:underline">Partners</a>
           </li>
 
         </ul>
@@ -563,23 +569,23 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Top Posts</a>
+            <a href="#blog" class="footer-link hover:underline">Top Posts</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Associated Links</a>
+            <a href="#blog" class="footer-link hover:underline">Associated Links</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Subscribe</a>
+            <a href="#blog" class="footer-link hover:underline">Subscribe</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Tags</a>
+            <a href="#blog" class="footer-link hover:underline">Tags</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link hover:underline">Authors</a>
+            <a href="#blog" class="footer-link hover:underline">Authors</a>
           </li>
 
         </ul>
@@ -589,7 +595,7 @@
       <div class="section footer-bottom">
 
         <p class="copyright">
-          &copy; {{homedict["madeby"]["intro"]}}<a href="#" class="copyright-link hover:underline">{{homedict["madeby"]["name"]}}</a>.
+          &copy; {{homedict["madeby"]["intro"]}}<a href="#footer" class="copyright-link hover:underline">{{homedict["madeby"]["name"]}}</a>.
         </p>
 
       </div>
