--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -492,9 +492,9 @@
           </li>
 
           <li class="footer-list-item">
-            <ion-icon name="logo-phone"></ion-icon>
+            <ion-icon name="logo-email"></ion-icon>
 
-            <a href="#footer" class="footer-link hover:underline">+254 790 771 946</a>
+            <a href="#footer" class="footer-link hover:underline">santanasteed@gmail.com</a>
           </li>
 
           <li class="footer-list-item">
