--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -77,7 +77,7 @@
           <span class="span three"></span>
         </button>
 
-        <a href="#" class="btn">Join</a>
+        <a href="#projects" class="btn">Explore</a>
 
       </div>
 
